<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SMS Backup</string>
    <string name="app_description">SMS Backup to Gmail over the internet.</string>
    <string name="app_version">1.1.1</string>
    
	<string name="ui_sync_button_label_idle">Backup now</string>
	<string name="ui_sync_button_label_done">Backup again</string>
	<string name="ui_sync_button_label_error">Retry backup</string>
	<!-- TODO(chstuder): Rename the following string resource. -->
	<string name="ui_sync_button_label_syncing">Stop backup</string>
	<string name="ui_sync_button_label_canceling">Stopping\u2026</string>
	
	<string name="status_idle">Idle</string>
		<string name="status_idle_details">Last backup: <xliff:g id="last_backup_date">%1$s</xliff:g></string>
		<string name="status_idle_details_never">Never</string>
	<string name="status_sync">Backing up</string>
		<string name="status_sync_details">Backed up <xliff:g id="backed_up_items">%1$d</xliff:g>/<xliff:g id="total_items">%2$d</xliff:g> items\u2026</string>
	<string name="status_login">Backing up</string>
		<string name="status_login_details">Logging in\u2026</string>
	<string name="status_done">Done</string>
		<string name="status_done_details_max_per_sync">Maximum of %1$d items per backup reached. Restart backup to continue.</string>
		<string name="status_done_details_noitems">There were no items to backup.</string>
		<plurals name="status_done_details">
	        <item quantity="one">Successfully backed up <xliff:g id="total_items">%1$d</xliff:g> item.</item>
	        <item quantity="other">Successfully backed up <xliff:g id="total_items">%1$d</xliff:g> items.</item>
	    </plurals>
	<string name="status_unknown_error">Error</string>
		<string name="status_unknown_error_details">Error during backup:\n<xliff:g id="error_description">%1$s</xliff:g></string>
	<string name="status_auth_failure">Login error</string>
		<string name="status_auth_failure_details">Please check your username and password.</string>
	<string name="status_calc">Backing up</string>
		<string name="status_calc_details">Calculating\u2026</string>
	<string name="status_canceled">Canceled</string>
		<string name="status_canceled_details">%1$d/%2$d items successfully backed up.</string>
	
	<string name="ui_status_label">SMS Backup</string>
	<string name="ui_sync_settings_label">Backup Settings</string>
	<string name="ui_settings_advanced_label">Advanced settings</string>
	<string name="ui_settings_advanced_desc">Set advanced preferences.</string>
	<string name="ui_settings_advanced_cat_label">SMS Backup <small>\u00bb Advanced settings</small></string>
	
	<string name="ui_login_label">Username</string>
	<string name="ui_login_desc">Your Google account/IMAP login.</string>
	<string name="ui_login_dialog_msg">WARNING: Changing the username will reset all your backup information and your password.</string>
	
	<string name="ui_password_label">Password</string>
	<string name="ui_password_desc">Your account password.</string>
	<string name="ui_password_dialog_msg">The password is stored on this device and is only used to login at Gmail.</string>	
	
	<string name="ui_imap_folder_label">Gmail label</string>
	<string name="ui_imap_folder_desc">Gmail label / IMAP folder assigned to SMS.</string>
	<string name="ui_imap_folder_label_dialog_msg">Backed up SMS messages will be tagged with this label in Gmail.</string>
	
	<string name="ui_max_items_per_sync_label">Items per backup</string>
	<string name="ui_max_items_per_sync_desc">Maximum number of items per backup.</string>
	
	<string name="ui_mark_as_read_label">Mark as read</string><string name="ui_mark_as_read_desc">Whether to mark messages as read or not.</string><string name="ui_enable_auto_sync_label">Auto backup</string>
	<string name="ui_enable_auto_sync_desc">Whether to automatically backup new SMS or not.</string>
	
	<string name="ui_dialog_missing_credentials_title">Login information</string>
	<string name="ui_dialog_missing_credentials_msg">You need to set the login information before backing up.</string>
	<string name="ui_dialog_sync_data_reset_title">Backup data reset</string>
	<string name="ui_dialog_sync_data_reset_msg">Backup data has been reset. Please set your password and perform a manual backup. You will be able to decide whether to backup or skip messages stored on this device.</string>
	<string name="ui_dialog_invalid_imap_folder_title">Invalid label name</string>
	<string name="ui_dialog_invalid_imap_folder_msg">The label name may only contain unaccented letters (A-Z, a-z).</string>
	
	<string name="ui_dialog_first_sync_title">First backup</string>
	<string name="ui_dialog_first_sync_msg">Backup or skip all messages currently stored on this device?\n\nNote: The backup will be split into batches of %1$d messages.</string>
	
	<string name="ui_dialog_need_first_manual_sync_title">First backup</string>
	<string name="ui_dialog_need_first_manual_sync_msg">The first backup needs to be initiated manually. Would you like to perform a backup now?</string>
	
	<!-- string name="ui_ok">OK</string -->
	<!-- string name="ui_yes">Yes</string -->
	<!-- string name="ui_no">No</string -->
	<string name="ui_sync">Backup</string>
	<string name="ui_skip">Skip</string>
	
	<string name="err_could_not_create_folder">Could not create label.</string>
	<string name="err_first_sync_needs_skip_flag">Internal error: First backup without indication whether to skip messages or not.</string>
	<string name="err_sync_requires_login_info">Cannot backup without login information.</string>
	<string name="err_communication_error">General communication error.</string>
	
	<string name="menu_info">About</string>
	<string name="menu_share">Share</string>
	<string name="menu_market">Update</string>
	
	<string name="about_email_button">Email author</string>
	<string name="about_email_subject">%1$s %2$s</string>
	<string name="about_email_content">Hi Christoph,\n</string>
	<string name="about_email_uri">mailto:chstuder@gmail.com</string>
	
	
	<string name="share_subject">SMS Backup for Android</string>
	<string name="share_body">You can now backup all SMS messages on your Android device to Gmail!\nCheck out the SMS Backup application by clicking the following link on your device:\n%1$s\nor visit:\n%2$s</string>
	
	<string name="ui_enable_gmail">Use Gmail account</string>
	<string name="ui_enable_gmail_desc">If disabled, you will need to configure a standard IMAP account (SSL or STARTTLS)</string>
	<string name="ui_server_settings_label">Server Settings</string>
	<string name="ui_imap_server_uri_label">Imap server URI</string>
	<string name="ui_imap_server_uri_desc">IMAP Server URI</string>
	<string name="ui_imap_server_uri_dialog_msg">myserver:port</string>
	<string name="ui_enable_ssl_label">Enable SSL</string>
	<string name="ui_enable_ssl_desc">Tick to enable SSL, untick to use STARTTLS</string>
	<string name="ui_server_settings_desc">desc</string>
	<string name="ui_sync_settings_desc">desc</string>
	<string name="ui_ssl_label">SSL</string>
	<string name="ui_starttls">STARTTLS</string>
	<string name="ui_security_protocols_desc">SSL or STARTTLS ?</string>
	<string name="ui_imap_server_uri_default">imap.gmail.com:993</string>
	
	<string name="ui_dialog_invalid_imap_server_uri_title">Invalid IMAP server URI</string>
	<string name="ui_dialog_invalid_imap_server_ui_msg">An IMAP server URI should be composed of host:portNumber</string>
	<string name="ui_imap_security_protocol">IMAP Security protocol</string>
	
	<string name="ui_dialog_need_to_check_connection_title">Connection changes detected</string>
	<string name="ui_dialog_need_to_check_connection_msg">Checking configuration is fine</string>
	<string name="ui_check_button_label">Check server settings</string>
	<string name="ui_missing_certificate">Certificate pb.</string>
	<string name="ui_please_retry">Please retry backing up, if you accepted the certificate</string>
	

</resources>
